Final ProgramControl tests