@@ -13,8 +13,10 @@ dependencies {
     testImplementation(platform("org.junit:junit-bom:5.10.0"))
     testImplementation("org.junit.jupiter:junit-jupiter")
     testRuntimeOnly("org.junit.platform:junit-platform-launcher")
+    testImplementation("org.mockito:mockito-core:5.21.0")
 }
 
 tasks.test {
     useJUnitPlatform()
+    jvmArgs("-Xshare:off","-XX:+EnableDynamicAgentLoading")
 }
